force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MaterialTypeUsed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaterialTypeUsed__c</fullName>
    <description>CRMD-7940</description>
    <label>Material Type Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U/G</fullName>
            </value>
            <value>
                <fullName>O/H</fullName>
            </value>
            <value>
                <fullName>U/G &amp; O/H</fullName>
            </value>
            <value>
                <fullName>Pillar / Switch Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>