force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MaxDemandlessthan138kVAperphase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaxDemandlessthan138kVAperphase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Demand less than 13.8kVA per phase</label>
    <type>Checkbox</type>
</CustomField>