force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MaximumDemandlessthancutoutrating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaximumDemandlessthancutoutrating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maximum Demand less than cut-out rating</label>
    <type>Checkbox</type>
</CustomField>