force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MaximumDemandofPremises__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaximumDemandofPremises__c</fullName>
    <label>Maximum Demand of Premises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>