force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Maximumdemandofproposedequipment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Maximumdemandofproposedequipment__c</fullName>
    <label>Maximum demand of proposed equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>