force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MeteringPointAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeteringPointAddress__c</fullName>
    <label>Metering Point Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>