force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MeterLocation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeterLocation__c</fullName>
    <label>Meter Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>