force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MeterPointPostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeterPointPostCode__c</fullName>
    <label>Meter Point PostCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>