force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MeterSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeterSerialNumber__c</fullName>
    <label>Meter Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>