force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ModifiedEpochTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ModifiedEpochTime__c</fullName>
    <label>Modified Epoch Time</label>
    <type>Time</type>
</CustomField>