force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MOPID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MOPID__c</fullName>
    <label>MOP ID(M)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>