force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MOPName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MOPName__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOP Name</label>
    <type>Text</type>
</CustomField>