force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MOPStayonsiteCATA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MOPStayonsiteCATA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of CRMD-10581</description>
    <label>MOP Stay on site (CAT-A)</label>
    <type>Checkbox</type>
</CustomField>