force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_MPANCore__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPANCore__c</fullName>
    <label>MPAN Core</label>
    <length>13</length>
    <type>Text</type>
</CustomField>