force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NCTApproval__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NCTApproval__c</fullName>
    <description>NCT Approval for Web Form</description>
    <label>NCT Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>