force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NewPremisesGenerationCapacity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPremisesGenerationCapacity__c</fullName>
    <label>New Premises Generation Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>