force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NewPremisesMaxDemand__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPremisesMaxDemand__c</fullName>
    <label>New Premises Max Demand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>