force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Nocontactnumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Nocontactnumber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of CRMD-10581</description>
    <label>No contact number</label>
    <type>Checkbox</type>
</CustomField>