force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoDaysofDiggingRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoDaysofDiggingRequired__c</fullName>
    <label>No. Days of Digging Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>