force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoofCHchanged__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofCHchanged__c</fullName>
    <label>No. of C/H changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>