force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoofLateralsmtra__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofLateralsmtra__c</fullName>
    <label>No. of Laterals (mtra)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>