force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoofServicesRenewed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofServicesRenewed__c</fullName>
    <label>No. of Services Renewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>