force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NosafetyconcernsDNOserviceequipment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NosafetyconcernsDNOserviceequipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No safety concerns DNO service equipment</label>
    <type>Checkbox</type>
</CustomField>