force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NotaLoopedSupply__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NotaLoopedSupply__c</fullName>
    <label>Not a Looped Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>