force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Note__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>