force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoticeRequestorBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeRequestorBusinessUnit__c</fullName>
    <description>Notice Requestor Business Unit for Web Form</description>
    <label>Notice Requestor Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connections (Fully Customer Funded)</fullName>
            </value>
            <value>
                <fullName>Connections (Partially Customer Funded)</fullName>
            </value>
            <value>
                <fullName>Connections (SPEN Funded)</fullName>
            </value>
            <value>
                <fullName>Reactive Faults (LV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Planned Repairs (LV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Planned Works (LV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Reactive Faults (HV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Planned Repairs (HV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Planned Works (HV - UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Network Programme (UG &amp; OHL)</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Street Lighting Faults (SPEN)</fullName>
            </value>
            <value>
                <fullName>Street Lighting Connections (SPEN)</fullName>
            </value>
            <value>
                <fullName>Maintenance (Tea cutting &amp; Link Box Lids)</fullName>
            </value>
            <value>
                <fullName>Jones Lighting</fullName>
            </value>
            <value>
                <fullName>Licence Programmes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>