force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoticeRequestorContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeRequestorContact__c</fullName>
    <description>Notice Requestor Contact  for Web Form</description>
    <label>Notice Requestor Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>