force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoticeRequestorEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeRequestorEmail__c</fullName>
    <description>Notice Requestor Email for webform</description>
    <label>Notice Requestor Email</label>
    <type>Email</type>
</CustomField>