force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NoticeRequestorName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeRequestorName__c</fullName>
    <description>Notice Requestor Name for Web Form</description>
    <label>Notice Requestor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>