force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_NRSWABusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NRSWABusinessUnit__c</fullName>
    <formula>IF( (SPEN_Case__r.RecordType.DeveloperName =&apos;SPEN_NRSWA&apos;&amp;&amp; SPEN_Case__r.SPEN_SPDSPMIndicator__c =&apos;SPD&apos;),&apos;Immediate emergency&apos; , IF( (SPEN_Case__r.RecordType.DeveloperName=&apos;SPEN_NRSWA&apos; &amp;&amp; SPEN_Case__r.SPEN_SPDSPMIndicator__c =&apos;SPM&apos;) , &apos;Immediate urgent&apos;,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRSWA Business Unit</label>
    <type>Text</type>
</CustomField>