force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Numberofphases__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Numberofphases__c</fullName>
    <label>Number of phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premises cut out rating</fullName>
            </value>
            <value>
                <fullName>Looped Service</fullName>
            </value>
            <value>
                <fullName>Details</fullName>
            </value>
            <value>
                <fullName>No other issues identified with adequacy or integrity of the DNO service equipment</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>