force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Oimportorloadlimitingdevicepremises__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Oimportorloadlimitingdevicepremises__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oimport or load limiting device premises</label>
    <type>Checkbox</type>
</CustomField>