force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_OtherContractorName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherContractorName__c</fullName>
    <description>CRMD-724</description>
    <label>Other Contractor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>