force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_OtherIDNOUtilityContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherIDNOUtilityContactName__c</fullName>
    <description>CRMD-7940</description>
    <label>Other IDNO Utility Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>