force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_OtherIDNOUtilityContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherIDNOUtilityContactNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Other IDNO Utility Contact Number</label>
    <type>Phone</type>
</CustomField>