force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PhaseCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhaseCode__c</fullName>
    <label>Phase Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>