force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PhasePowerSupply__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhasePowerSupply__c</fullName>
    <label>Phase Power Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>