force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PhotographsTaken__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhotographsTaken__c</fullName>
    <description>Used in Conga Templated</description>
    <formula>IF( AND(SPEN_Case__r.RecordType.DeveloperName = &apos;SPEN_ThirdPartyDamage&apos;, 
 OR(ISPICKVAL(SPEN_Case__r.SPEN_MissingPhotosReview__c, &apos;Photos Recieved&apos;), ISPICKVAL(SPEN_Case__r.SPEN_MissingPhotosReview__c,&quot;&quot;))),
&apos;ENCLOSED&apos;,
&apos;N/A&apos;
)</formula>
    <label>Photographs Taken</label>
    <type>Text</type>
</CustomField>