force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PhotoTechnicalValidationReceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhotoTechnicalValidationReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of CRMD-10581</description>
    <label>Photo/Technical Validation Received</label>
    <type>Checkbox</type>
</CustomField>