force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_POIssued__c.field-meta.xml
<CustomField>
    <fullName>SPEN_POIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Issued</label>
    <type>Checkbox</type>
</CustomField>