force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Postcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>