force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PowerFactor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PowerFactor__c</fullName>
    <label>Power Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>