force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Premisescutoutrating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Premisescutoutrating__c</fullName>
    <label>Premises cut out rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>