force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_premisesloadcutoutfuserating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_premisesloadcutoutfuserating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>premises load &lt; cut-out fuse rating</label>
    <type>Checkbox</type>
</CustomField>