force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PrinciplePartyCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyCategory__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>