force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PrinciplePartyContactTelNo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyContactTelNo__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party Contact Tel No</label>
    <type>Phone</type>
</CustomField>