force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PrinciplePartyName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyName__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>