force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PrinciplePartyPostcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyPostcode__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>