force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_PrivateLand__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrivateLand__c</fullName>
    <description>CRMD-7940</description>
    <label>Private Land?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>