force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ProjectCosts__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectCosts__c</fullName>
    <label>Project Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>