force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ProjectId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectId__c</fullName>
    <description>Project Id for Web Form</description>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>