force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ProjectNumberissued__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectNumberissued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Number issued</label>
    <type>Checkbox</type>
</CustomField>