force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_RAG__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAG__c</fullName>
    <label>RAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>