force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ReinstatementDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReinstatementDate__c</fullName>
    <label>Reinstatement Date</label>
    <type>Date</type>
</CustomField>