force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReportedBy__c</fullName>
    <description>CRMD-8138</description>
    <inlineHelpText>Contact/Caller Name From Damage Equipment Wizard Case</inlineHelpText>
    <label>Reported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>