force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ReportedByContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReportedByContactNumber__c</fullName>
    <description>Contact/ Caller Mobile or Telephone number</description>
    <label>Reported By Contact Number</label>
    <type>Phone</type>
</CustomField>