force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ResolutionCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResolutionCategory__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Outcome Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved - cancellation</fullName>
            </value>
            <value>
                <fullName>Resolved - Customer Service Simply Thank You</fullName>
            </value>
            <value>
                <fullName>Resolved - Explanation Provided</fullName>
            </value>
            <value>
                <fullName>Resolved - goodwill payment</fullName>
            </value>
            <value>
                <fullName>Resolved - information sent</fullName>
            </value>
            <value>
                <fullName>Resolved - insurance payment</fullName>
            </value>
            <value>
                <fullName>Resolved - no payment</fullName>
            </value>
            <value>
                <fullName>Resolved - wayleave payments made</fullName>
            </value>
            <value>
                <fullName>Resolved - wayleaves sent</fullName>
            </value>
            <value>
                <fullName>Resolved - Work Completed</fullName>
            </value>
            <value>
                <fullName>Already gone to BMCS survey</fullName>
            </value>
            <value>
                <fullName>Complaint raised prior to R&amp;R feedback, notes added</fullName>
            </value>
            <value>
                <fullName>Enquiry raised prior to R&amp;R feedback, notes added</fullName>
            </value>
            <value>
                <fullName>Complaint raised</fullName>
            </value>
            <value>
                <fullName>General Enquiry raised</fullName>
            </value>
            <value>
                <fullName>Contact not made - no voicemail left</fullName>
            </value>
            <value>
                <fullName>Contact not made - voicemail left</fullName>
            </value>
            <value>
                <fullName>Contact not made - SMS required</fullName>
            </value>
            <value>
                <fullName>Customer does not want to discuss experience/feedback</fullName>
            </value>
            <value>
                <fullName>Customer made mistake with score</fullName>
            </value>
            <value>
                <fullName>Customer satisfied with experience</fullName>
            </value>
            <value>
                <fullName>Customer still dissatisfied with experience but does not wish to raise a case</fullName>
            </value>
            <value>
                <fullName>Customer was not off supply (incorrect contact details)</fullName>
            </value>
            <value>
                <fullName>Passed to DCC</fullName>
            </value>
            <value>
                <fullName>Passed to District</fullName>
            </value>
            <value>
                <fullName>RATOC</fullName>
            </value>
            <value>
                <fullName>No response from customer.</fullName>
            </value>
            <value>
                <fullName>Resolved - Apology Provided</fullName>
            </value>
            <value>
                <fullName>Insurance Land Damage</fullName>
            </value>
            <value>
                <fullName>Cleared- defect cleared and Asset Condition Category as reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>